--- a/gadgets/templates/gadgets/account_register.html
+++ b/gadgets/templates/gadgets/account_register.html
@@ -6,10 +6,16 @@
 	<title>Document</title>
 </head>
 <body>
-	{% autoescape off %}
-		<h5> Привет {{user.username}} </h5>
-		Пожалуйста, нажмите на ссылку ниже, чтобы подтвердить почту <br>
-		http://{{domain}}{% url 'account_activation' uid64=uid token=token %}
-	{% endautoescape %}
+	<div class="col-8 mt-4">
+		<form action="" method="POST">
+			{% csrf_token %}
+			{{ reg_form.as_p }}
+			<button 
+				type="sumbit"
+				class="btn btn-success">
+				Регистрация
+			</button>
+		</form>
+	</div>
 </body>
 </html>
